Obscure API key in home.html

--- a/home.html
+++ b/home.html
@@ -508,7 +508,7 @@ document.querySelectorAll('.control-button.minimize').forEach(button => {
                 method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
-                'Authorization': 'Bearer sk-f2bbc440807e4a1f8df4f6db3f50325c'
+                'Authorization': 'xxxxxx'
             },
                 body: JSON.stringify({
                     model: "deepseek-chat",
